[gd_scene load_steps=20 format=3 uid="uid://b2k8db16jd8xf"]

[ext_resource type="Script" uid="uid://bopqe3bfsibqa" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="FontFile" uid="uid://sks63ere33r2" path="res://Pixelify_Sans/static/PixelifySans-Regular.ttf" id="1_ig7tw"]
[ext_resource type="Material" uid="uid://d2qdm1byirqow" path="res://shader.tres" id="2_h2yge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
content_margin_left = 24.0
content_margin_top = 44.0
content_margin_right = 24.0
content_margin_bottom = 44.0
bg_color = Color(0.8, 0.458824, 0.458824, 1)
border_color = Color(1, 1, 1, 0)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_272bh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c57u"]
bg_color = Color(0.684216, 0.415761, 0.467356, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kek77"]
bg_color = Color(0.552945, 0.316438, 0.363353, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
bg_color = Color(0.622659, 0.358569, 0.390856, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h2yge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bvp3"]
bg_color = Color(0.489962, 0.273861, 0.317473, 1)
border_width_left = 20
border_width_right = 20
border_color = Color(0.490196, 0.27451, 0.317647, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1bvp3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lquwl"]
bg_color = Color(0.490196, 0.27451, 0.317647, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.325441, 0.325441, 0.325441, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mycd"]
bg_color = Color(0.289274, 0.15012, 0.177497, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lquwl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7mycd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_272bh"]
bg_color = Color(0.490196, 0.27451, 0.317647, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_efxa6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vw27"]
bg_color = Color(0.386979, 0.209094, 0.244978, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ycdy4"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0xm2m")

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource("2_h2yge")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.2
anchor_right = 0.95
anchor_bottom = 0.86
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/v_separation = 5
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 86
theme_override_styles/panel = SubResource("StyleBoxFlat_0xm2m")
item_count = 2
icon_scale = 5.0
item_0/text = "hi"
item_1/text = "hello"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.9
anchor_right = 0.8
anchor_bottom = 0.99
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 71
theme_override_styles/focus = SubResource("StyleBoxEmpty_272bh")
theme_override_styles/hover = SubResource("StyleBoxFlat_4c57u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kek77")
theme_override_styles/normal = SubResource("StyleBoxFlat_4c57u")
text = "New"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65
anchor_top = 0.4
anchor_right = 0.65
anchor_bottom = 0.4
offset_left = -539.5
offset_top = -0.5
offset_right = 215.5
offset_bottom = 384.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h2yge")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -248.5
offset_top = 53.0
offset_right = 246.5
offset_bottom = 150.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("1_ig7tw")
theme_override_font_sizes/normal_font_size = 76
text = "Create Note"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.565
anchor_right = 0.5
anchor_bottom = 0.565
offset_left = -338.0
offset_top = -44.0
offset_right = 338.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 66
theme_override_styles/focus = SubResource("StyleBoxEmpty_h2yge")
theme_override_styles/normal = SubResource("StyleBoxFlat_1bvp3")
placeholder_text = "Enter File Name"

[node name="Create" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = 97.0
offset_right = 84.5
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("StyleBoxEmpty_1bvp3")
theme_override_styles/hover = SubResource("StyleBoxFlat_lquwl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7mycd")
theme_override_styles/normal = SubResource("StyleBoxFlat_lquwl")
text = "Create"

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -95.0
offset_top = 32.0
offset_right = -42.0
offset_bottom = 88.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxEmpty_lquwl")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_7mycd")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_272bh")
theme_override_styles/hover = SubResource("StyleBoxFlat_272bh")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_efxa6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5vw27")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ycdy4")
theme_override_styles/normal = SubResource("StyleBoxFlat_272bh")
text = "X"

[connection signal="item_clicked" from="ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_button_2_pressed"]
